// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ProgressBar.Item animated=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item animated=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-bricks-progress-bar-item-striped uu5-bricks-progress-bar-item-active"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkGrammar=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkGrammar=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkHighlight=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkHighlight=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkSpaces=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkSpaces=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item className="my-classname" 1`] = `
<div
  className="uu5-bricks-progress-bar-item my-classname"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item content=12345 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item controlled=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item controlled=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item default props 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item disabled=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item disabled=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-disabled"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item docKit examples UU5.Bricks.ProgressBar.Item should render without crash 1`] = `
<progress-bar-cover
  className="uu5-bricks-progress-bar uu5-bricks-progress-bar-size-m"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <ProgressBarItem
    colorSchema="blue"
    id="uuID2"
    key="uuID2"
    progress={20}
    striped={true}
  />
  <ProgressBarItem
    colorSchema="purple"
    id="uuID3"
    key="uuID3"
    progress={30}
  />
  <ProgressBarItem
    animated={true}
    colorSchema="red"
    id="uuID4"
    key="uuID4"
    progress={45}
  />
</progress-bar-cover>
`;

exports[`UU5.Bricks.ProgressBar.Item dynamic=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item dynamic=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item hidden=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item hidden=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item id="myId" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="myId"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item name="myName" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  name="myName"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="smallBox" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item noIndex=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item noIndex=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-noindex"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item progress=0 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item progress=50 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "50%",
    }
  }
  title={null}
>
  50 %
</div>
`;

exports[`UU5.Bricks.ProgressBar.Item progress=100 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "100%",
    }
  }
  title={null}
>
  100 %
</div>
`;

exports[`UU5.Bricks.ProgressBar.Item pureRender=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item pureRender=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item selected=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item selected=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-selected"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item striped=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item striped=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-bricks-progress-bar-item-striped"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item textCorrector=false 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item textCorrector=true 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title="My Tooltip"
/>
`;
